<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roterizador</string>
    <string name="action_settings">Settings</string>
    <string name="buscar_recomendacao">Recomendar</string>
    <string name="configurar">Configurar</string>
    <string name="ipServidor">Endereço do servidor</string>
    <string name="limpar_recomendacao">Limpar</string>
    <string name="confirmar">Confirmar</string>
    <string name="portaServidor">Porta do servidor</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="sexo">Sexo</string>
    <string name="idade">Idade</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="localtrabalho">Local trabalho</string>
    <string name="estadocivil">Estado civil</string>
    <string name="gastoviagem">Gasto viagem</string>
    <string name="acompanhante">Acompanhante</string>
    <string name="hospedagem">Hospedagem</string>
    <string name="transporteevento">Transporte evento</string>
    <string name="meiotransporte">Meio transporte</string>
    <string name="periodicidadevisita">Periodicidade visita</string>
    <string name="tempoestadia">Tempo estadia</string>
    <string name="renda">Renda mensal</string>
	<string name="posicao_gps">Posição GPS</string>
</resources>